@@ -3,9 +3,10 @@
   :url "http://github.com/cloojure/tupelo"
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
-  :dependencies [
+  :dependencies
+  [
     [cheshire                         "5.8.0"]
-    [clj-time                         "0.14.2"]
+   ;[clj-time                         "0.14.2"]
     [clojure-csv/clojure-csv          "2.0.2"]
     [criterium                        "0.4.4"]
     [danlentz/clj-uuid                "0.1.7"]
@@ -16,14 +17,15 @@
     [org.clojure/core.match           "0.3.0-alpha4"]
     [org.clojure/data.xml             "0.2.0-alpha5"]
     [org.clojure/math.combinatorics   "0.1.4"]
-    [org.clojure/math.combinatorics   "0.1.4"]
     [org.clojure/spec.alpha           "0.1.143"]
     [org.clojure/test.check           "0.9.0"]
     [org.clojure/tools.analyzer       "0.6.9"]
     [prismatic/schema                 "1.1.7"]
   ]
-  :profiles { :dev      {:dependencies [  ] }
+  :profiles { :dev      {:dependencies [] 
+                         :plugins [] }
               :uberjar  {:aot :all}}
+
   :global-vars { *warn-on-reflection* false }
 
   :plugins  [ [lein-codox "0.10.3"] ]
@@ -44,5 +46,9 @@
                    :slow    :slow}
       ; #todo broken for tupelo.test/dospec - why?
 
-  :jvm-opts ^:replace ["-Xms1g" "-Xmx4g" ] ; "-server"
+
+  :jvm-opts ["-Xms500m" "-Xmx2g"
+            ;"--add-modules" "java.xml.bind"
+            ;"-server"
+            ]
 )
